--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "blogilista",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "watch": "node_modules/.bin/nodemon index.js",
+    "lint": "node_modules/.bin/eslint ."
   },
   "author": "Jacinto Ramirez Lahti",
   "license": "MIT",
