--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "watch": "node_modules/.bin/nodemon index.js",
-    "lint": "node_modules/.bin/eslint ."
+    "lint": "node_modules/.bin/eslint .",
+    "test": "jest --verbose"
   },
   "author": "Jacinto Ramirez Lahti",
   "license": "MIT",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "eslint": "^4.18.0",
+    "jest": "^22.3.0",
     "nodemon": "^1.15.0"
   }
 }
