--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "watch": "node_modules/.bin/nodemon index.js",
-    "lint": "node_modules/.bin/eslint .",
-    "test": "jest --verbose"
+    "start": "NODE_ENV=production node index.js",
+    "watch": "NODE_ENV=development nodemon index.js",
+    "test": "NODE_ENV=test jest --verbose --forceExit",
+    "lint": "eslint ."
   },
   "author": "Jacinto Ramirez Lahti",
   "license": "MIT",
@@ -18,8 +18,10 @@
     "mongoose": "^5.0.6"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.1",
     "eslint": "^4.18.0",
     "jest": "^22.3.0",
-    "nodemon": "^1.15.0"
+    "nodemon": "^1.15.0",
+    "supertest": "^3.0.0"
   }
 }
